[project]
name = "couleuvre"
version = "0.0.4"
description = "Vyper Language Server"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "trocher", email = "tanguy.rocher@chainsecurity.com"}
]
keywords = ["vyper", "language-server", "lsp"]
dependencies = [
    "lsprotocol>=2025.0.0",
    "pygls>=2.0.0",
    "uv>=0.9.17",
]

[project.scripts]
couleuvre = "couleuvre.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "couleuvre"
module-root = ""

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
